--- a/package.json
+++ b/package.json
@@ -5,11 +5,21 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "cypress": "node_modules\\.bin\\cypress open"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.3",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "styled-components": "^5.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.6.4",
+    "@types/react": "^16.9.49",
+    "babel-plugin-styled-components": "^1.11.1",
+    "cypress": "^5.1.0",
+    "typescript": "^4.0.2"
   }
 }
