--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.3",
+    "framer-motion": "^2.6.10",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
