--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@types/styled-components": "^5.1.3",
+    "axios": "^0.20.0",
     "framer-motion": "^2.6.10",
     "next": "9.5.3",
     "react": "16.13.1",
