--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@types/styled-components": "^5.1.3",
+    "@types/validator": "^13.1.0",
     "axios": "^0.20.0",
+    "final-form": "^4.20.1",
+    "final-form-focus": "^1.1.2",
     "framer-motion": "^2.6.10",
     "html-react-parser": "^0.14.0",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.2.0"
+    "react-final-form": "^6.5.2",
+    "styled-components": "^5.2.0",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
+    "@types/material-ui": "^0.21.8",
     "@types/node": "^14.6.4",
     "@types/react": "^16.9.49",
     "babel-plugin-styled-components": "^1.11.1",
