--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/mongodb": "^3.5.33",
     "@types/styled-components": "^5.1.3",
     "@types/validator": "^13.1.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.0",
+    "bcryptjs": "^2.4.3",
     "final-form": "^4.20.1",
     "final-form-focus": "^1.1.2",
     "framer-motion": "^2.6.10",
     "html-react-parser": "^0.14.0",
+    "mongodb": "^3.6.3",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
