--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-final-form": "^6.5.2",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.0",
     "validator": "^13.1.17"
   },
