--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-final-form": "^6.5.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.2.0",
     "validator": "^13.1.17"
   },
@@ -35,6 +36,7 @@
     "@types/material-ui": "^0.21.8",
     "@types/node": "^14.6.4",
     "@types/react": "^16.9.49",
+    "@types/react-redux": "^7.1.12",
     "babel-plugin-styled-components": "^1.11.1",
     "cypress": "^5.1.0",
     "typescript": "^4.0.2"
