--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/validator": "^13.1.0",
     "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.4.1",
     "final-form": "^4.20.1",
     "final-form-focus": "^1.1.2",
     "framer-motion": "^2.6.10",
     "html-react-parser": "^0.14.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "next": "9.5.3",
     "react": "16.13.1",
@@ -33,6 +35,8 @@
     "validator": "^13.1.17"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^14.6.4",
     "@types/react": "^16.9.49",
