--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@types/bcryptjs": "^2.4.2",
+    "@types/js-cookie": "^2.2.6",
     "@types/mongodb": "^3.5.33",
     "@types/styled-components": "^5.1.3",
     "@types/validator": "^13.1.0",
@@ -22,6 +23,7 @@
     "final-form-focus": "^1.1.2",
     "framer-motion": "^2.6.10",
     "html-react-parser": "^0.14.0",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "next": "9.5.3",
