--- a/package.json
+++ b/package.json
@@ -11,13 +11,9 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/js-cookie": "^2.2.6",
-    "@types/mongodb": "^3.5.33",
-    "@types/styled-components": "^5.1.3",
-    "@types/validator": "^13.1.0",
     "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
+    "caniuse-lite": "^1.0.30001181",
     "cookie": "^0.4.1",
     "final-form": "^4.20.1",
     "final-form-focus": "^1.1.2",
@@ -37,12 +33,17 @@
     "validator": "^13.1.17"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.4.0",
+    "@types/js-cookie": "^2.2.6",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/material-ui": "^0.21.8",
+    "@types/mongodb": "^3.5.33",
     "@types/node": "^14.6.4",
     "@types/react": "^16.9.49",
     "@types/react-redux": "^7.1.12",
+    "@types/styled-components": "^5.1.3",
+    "@types/validator": "^13.1.0",
     "babel-plugin-styled-components": "^1.11.1",
     "cypress": "^5.1.0",
     "typescript": "^4.0.2"
