--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
-    "next": "9.5.3",
+    "next": "^10.0.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-final-form": "^6.5.2",
