--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "cypress": "node_modules\\.bin\\cypress open"
   },
   "dependencies": {
