--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "next": "^10.0.6",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-final-form": "^6.5.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
